Fixed overflow in body

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: 0px;
 }
 
+:root{
+    --sdbrwidth: 400px
+}
+
 body {
     display: flex;
     font-family: 'Nunito', sans-serif;
@@ -12,8 +16,7 @@ body {
 
 aside{
     height: 100vh;
-    /* width: 35%; */
-    width: clamp(200px,35%,600px);
+    width: var(--sdbrwidth);
     background: url(images/sidebar.jpg) center center no-repeat;
     background-size: cover;
     display: flex;
@@ -30,29 +33,24 @@ aside div{
 }
 
 main{
-    /* width: 65%; */
+    width: calc(100vw - var(--sdbrwidth));
     height: 100vh;
 }
 
 section:first-child {
-    height: 35vh;
     display: flex;
-    justify-content: end;
-    gap: 20px;
     flex-direction: column;
-    padding: 40px 30px;
 }
 
 section:first-child p {
     font-size: 21px;
     font-weight: 700;
-    width: 650px;
+    max-width: 650px;
 }
 
 form{
-    box-shadow: 0px 2px 3px 1px grey;
-    width: 100%;
-    padding: 1rem 0 1px 1rem;
+    box-shadow: 0px 1px 5px rgb(158, 158, 158);
+    max-width: 100%;
 }
 
 form>div{
@@ -102,7 +100,6 @@ button{
     color: white;
     background-color: rgb(187, 70, 50);
 
-    margin: 1rem;
 }
 
 button:hover{
